syntax = "proto3";

package user.auth.v1;

option go_package = "internal/contracts/v1/auth";

message RegisterRequest {
  string login = 1;
  string password = 2;
}

message RegisterResponse {
  string user_uuid = 1;
}

message LoginRequest {
  string login = 1;
  string password = 2;
}

message LoginResponse {
  string token = 1;
}

service AuthService {
  rpc Register (RegisterRequest) returns (RegisterResponse);
  rpc Login (LoginRequest) returns (LoginResponse);
}